Fix hard to read about this dispute card titles

--- a/src/stylesheets/components/dispute-tools/TextModal.css
+++ b/src/stylesheets/components/dispute-tools/TextModal.css
@@ -1,7 +1,7 @@
 .Tools__Text-Modal {
   & h3,
   & strong {
-    color: var(--k-color-palette-accent);
+    color: var(--blue);
   }
 
   & h3 {
